2022-12-20  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu.h (DG_error, DG_warning): New functions.
	(TestState::error, TestState::warning): New methods.
	* doc/dejagnu.texi (C unit testing API): Document new functions.
	(C++ unit testing API): Document new methods and fix an error:
	TestState::unsupported does not take varargs.
	* testsuite/libdejagnu/unit-c.c (main): Add support for testing
	errors and warnings.
	* testsuite/libdejagnu/unit-cxx.cxx (main): Likewise.
	* testsuite/libdejagnu/unit-ccxxmix.cxx (main): Likewise.
	* testsuite/libdejagnu/harness.exp: Add tests.
	(test_libdejagnu_unit): Add support for ERROR and WARNING tokens.

	* doc/dejagnu.texi (DejaGnu unit test protocol): Add ERROR and
	WARNING tokens to DejaGnu unit testing protocol.
	* lib/dejagnu.exp (host_execute): Implement same.
	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.exp,
	  testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.awk:
	Add support for testing ERROR and WARNING tokens.
	* testsuite/runtest.main/stats.exp: Add tests for UNRESOLVED
	results after warnings and errors in unit test programs.

	* testsuite/runtest.main/stats.exp: Add tests for UNRESOLVED
	results after warnings and errors.
	* testsuite/runtest.main/nested/testsuite/stat.test/stats-sub.exp:
	Add support for above.

2022-11-30  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/libdejagnu/unit.exp: Rename this...
	* testsuite/libdejagnu/harness.exp: ...to this.

	* doc/dejagnu.texi (C++ unit testing API): Document recent
	improvements and the rest of the C++ API.

	* dejagnu.h (TestState::TestState): Only perform initialization
	when the first TestState object is constructed.
	(DG): Add global TestState object.

	* dejagnu.h (DG__endmsg): New function, called using atexit().
	(endmsg_registered, TestState_count): Add fields to DG__status.
	(DG__init): New function, to register DG__endmsg.
	(pass, xpass, fail, xfail, untested, unresolved, unsupported)